stuck on recursion bug verify.js line 119

--- a/integrated_django_react/frontend/src/components/App.css
+++ b/integrated_django_react/frontend/src/components/App.css
@@ -53,6 +53,15 @@ input {
 
 .blanket {
   position: fixed;
-  top: 40px;
-  margin: auto;
+  width: 1000px;
+  height: 600px;
+  top: 50%;
+  left: 50%;
+  margin-top: -300px;
+  margin-left: -500px;
+  background-color: lightgray;
+  border-radius: 20px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  opacity: 95%;
 }
